syntax = "proto3";
option java_multiple_files = true;
service TrendingMoviesService {
    rpc GetTopMovies (TopMoviesRequest) returns (TopMoviesResponse);
}

message TopMoviesRequest {
    int32 count = 1;
}

message Movie {
    string name = 1;
    string description = 2;
    double rating = 3;
}

message TopMoviesResponse {
    repeated Movie movies = 1;
}
